--- a/MobileMvxApp/BLE.Client/PagesViewModelsSet/Settings/PageAbout.xaml
+++ b/MobileMvxApp/BLE.Client/PagesViewModelsSet/Settings/PageAbout.xaml
@@ -8,7 +8,8 @@
 
 	<StackLayout Margin="0,100,0,0">
 		<StackLayout VerticalOptions="Center" HorizontalOptions="Center">
-          <Label x:Name="labelAppVer" Text="Application Version"/>
+            <Label x:Name="labelModel" Text="Model"/>
+            <Label x:Name="labelAppVer" Text="Application Version"/>
           <Label x:Name="labelLibVer" Text="Library Version"/>
           <Label x:Name="labelBtFwVer" Text="Bluetooth Firmware Version"/>
           <Label x:Name="labelRFIDFwVer" Text="RFID Firmware Version"/>
