--- a/MobileMvxApp/BLE.Client/PagesViewModelsSet/SpecialFuction/PageSpecialFunctionsMenu.xaml
+++ b/MobileMvxApp/BLE.Client/PagesViewModelsSet/SpecialFuction/PageSpecialFunctionsMenu.xaml
@@ -19,6 +19,7 @@
                 <Button Text="Asygn" Font="Large" Command="{Binding OnAsygnButtonCommand}" HorizontalOptions="FillAndExpand" BackgroundColor="#C3C3C3" TextColor="Black" />
                 <!--<Button Text="MQTT" Font="Large" Command="{Binding OnMQTTButtonCommand}" HorizontalOptions="FillAndExpand" BackgroundColor="#C3C3C3" TextColor="Black" />-->
                 <Button Text="Java Wedge Forwarder" Font="Large" Command="{Binding OnInventorytoWedgeForwarderButtonCommand}" HorizontalOptions="FillAndExpand" BackgroundColor="#C3C3C3" TextColor="Black" />
+                <Button Text="Barcode and RFID Inventory" Font="Large" Command="{Binding OnBarcodeandRFIDInventoryButtonCommand}" HorizontalOptions="FillAndExpand" BackgroundColor="#C3C3C3" TextColor="Black" />
 
 
                 <!--<Button Text="Phase and Channel Inventory" Font="Large" Command="{Binding OnPhaseChannelInventoryButtonCommand}" HorizontalOptions="FillAndExpand" BackgroundColor="#C3C3C3" TextColor="Black" />
